# zephyr-minimal-example-zsock-listen

./: .gitattributes  .gitignore  Makefile  README.md
.west/: config
app/: CMakeLists.txt  prj.conf  sections-rom.ld
app/src/: config.h  httpserver.cpp  httpserver.h  main.c  main.cpp  main.h  wifi.cpp  wifi.h
assets/: nucleo_u575zi_q.overlay
